fix cart to shopping bag

--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -74,7 +74,7 @@
   },
   "cart": {
     "general": {
-      "title": "Your bag",
+      "title": "Shopping Bag",
       "remove": "Remove",
       "note": "Special instructions",
       "subtotal": "Subtotal",
